// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v2;

import "com/digitalasset/canton/protocol/v0/common.proto";
import "com/digitalasset/canton/protocol/v1/mediator.proto";
import "com/digitalasset/canton/protocol/v1/mediator_response.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "scalapb/scalapb.proto";

// Changes from v1:
// Removed field notification_tree
// Added fields root_hash, domain_id
message TransactionResultMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  Verdict verdict = 2;
  bytes root_hash = 3;
  string domain_id = 4;
}

message Verdict {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  oneof some_verdict {
    google.protobuf.Empty approve = 1;
    ParticipantReject participant_reject = 2; // new version
    com.digitalasset.canton.protocol.v1.MediatorReject mediator_reject = 3;
  }
}

message ParticipantReject {
  repeated RejectionReason reasons = 1; // new version
}

message RejectionReason {
  repeated string parties = 1;
  com.digitalasset.canton.protocol.v1.LocalReject reject = 2; // Using v1.LocalReject instead of v0.LocalReject
}

message TransferResult {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  oneof domain {
    string source_domain = 2; // renamed; result for transfer-out request
    string target_domain = 3; // result for transfer-in request
  }
  repeated string informees = 4;
  Verdict verdict = 5; // new Verdict type
}

message MediatorReject {
  google.rpc.Status reason = 1; // Must not be OK
}

message MalformedMediatorRequestResult {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  string domain_id = 2;
  com.digitalasset.canton.protocol.v0.ViewType view_type = 3;
  MediatorReject rejection = 4; // v1.MediatorReject -> v2.MediatorReject
}
